--- a/crates/next-core/Cargo.toml
+++ b/crates/next-core/Cargo.toml
@@ -10,6 +10,7 @@ bench = false
 
 [dependencies]
 anyhow = "1.0.47"
+auto-hash-map = { path = "../auto-hash-map" }
 indexmap = { workspace = true, features = ["serde"] }
 once_cell = "1.13.0"
 qstring = "0.7.2"
